ecmascript/parser/tests/test262-error-references/fail/06272e1e03d6ced7.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/06272e1e03d6ced7.js:1:2
  |
1 | [...x,,] = 0
  |  ^^^^

